--- a/src/styles/device.css
+++ b/src/styles/device.css
@@ -127,11 +127,12 @@ button{
 
  .sidebar {  
   float: left;
-  width: 60px;
+  width: 89px;
   height: 700px;
   margin: 0 10px ;
   padding: 10px;
   border-right: 2px solid #eee;
+  background: #008080;
  }
 
  .guage {
@@ -259,6 +260,8 @@ button{
   border: none;
   font-size: 1rem;
   cursor: pointer;
+  width: 10em;
+  margin-top: 10px;
 }
 
 .crud-button--circular {
@@ -278,11 +281,11 @@ button{
 }
 
 .crud-button--positive {
-  background-color: #21d05b;
+  background-color: #008080;
 }
 
 .crud-button--positive:hover {
-  background-color: #1da54a;
+  background-color: #40ab75;
   transition: all 1s;
 }
 
